[package]
name = "trso-migrator"
version = "0.1.0"
authors = ["Sardorbek Pulatov <sardo@hey.com>"]
edition = "2021"
description = "Simple and easy migrator for Turso"
license = "MIT"
repository = "https://github.com/oneslash/trso-migrator"
publish = true

[dependencies]
clap = { version = "4.5", features = ["env", "derive"] }
libsql = "0.4"
tokio = { version = "1.38.0", features = ["full"] }

